# matrixtui

./: Cargo.toml  README.md
src/: account.rs  app.rs  config.rs  event.rs  main.rs  ui.rs
