[package]
name = "matrixtui"
version = "0.1.0"
edition = "2024"
description = "Multi-account terminal Matrix client"
license = "MIT"

[[bin]]
name = "mtui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = { version = "4.2", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"

# Matrix
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite"] }
matrix-sdk-sqlite = { version = "0.16", features = ["bundled"] }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization (config, credentials)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
anyhow = "1"
mime = "0.3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
